--- a/index.html
+++ b/index.html
@@ -130,6 +130,9 @@
             </li>
         </ul>
     </section>
+    <section>
+        <h2>Proyectos</h2>
+    </section>
     </main>
     <footer>
     <p>©Dario Pacheco 2022 - @yagamiar15 </p>
